--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "一些笔记。",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node script/buildHtmlFile.js"
   },
   "repository": {
     "type": "git",
