--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/chengyuan1216/chengyuan1216.github.io#readme",
   "devDependencies": {
+    "ejs": "^2.7.1",
     "highlight": "^0.2.4",
     "marked": "^0.7.0",
     "request": "^2.88.0"
