--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node script/buildHtmlFile.js",
     "md2html": "node script/md2html.js",
-    "test": "i5ting_toc -f docs/0资源/资源链接.md"
+    "start": "npm run md2html && npm run build"
   },
   "repository": {
     "type": "git",
